--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "chart.js": "^4.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.3.1",
-    "sequelize": "^6.31.1"
+    "sequelize": "^6.31.1",
+    "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
+    "connect-session-sequelize": "^7.0.4"
   }
 }
