--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "start": "node server.js",
     "seed": "node seeds/seed.js"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-session-sequelize": "^7.0.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "morgan": "^1.10.0",
-    "mysql2": "^3.3.1",
-    "sequelize": "^6.31.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
-    "connect-session-sequelize": "^7.0.4"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.3.1",
+    "sequelize": "^6.31.1"
   }
 }
